testdata/baselines/reference/conformance/typedefModuleExportsIndirect1.errors.txt
use.js(1,22): error TS2307: Cannot find module './controlFlowJSClassProperty' or its corresponding type declarations.


==== typedefModuleExportsIndirect1.js (0 errors) ====
    /** @typedef {{ a: 1, m: 1 }} C */
    const dummy = 0;
    module.exports = dummy;
==== use.js (1 errors) ====
    /** @typedef {import('./controlFlowJSClassProperty').C} C */
                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './controlFlowJSClassProperty' or its corresponding type declarations.
    /** @type {C} */
    var c
    